<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.xingzhou.projects</groupId>
  <artifactId>simple-event-store</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>simple-event-store</name>
  <url>http://https://github.com/ohdyno/simple-event-store/</url>
  <properties>
    <auto-service.version>1.1.1</auto-service.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.cucumber</groupId>
        <artifactId>cucumber-bom</artifactId>
        <version>7.21.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-bom</artifactId>
        <version>3.27.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.13.0-M2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.17.2</version>
    </dependency>
    <dependency>
      <groupId>com.google.auto.service</groupId>
      <artifactId>auto-service-annotations</artifactId>
      <version>${auto-service.version}</version>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-junit-platform-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-picocontainer</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.annotation</groupId>
      <artifactId>jakarta.annotation-api</artifactId>
      <version>3.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.44.3</version>
          <configuration>
            <java>
              <includes>
                <include>**/*.java</include>
              </includes>
              <toggleOffOn/>
              <cleanthat>
                <version>2.22</version>
                <mutators>
                  <!-- Mutators at: https://github.com/solven-eu/cleanthat/blob/v2.22.RELEASE/MUTATORS.generated.MD -->
                  <mutator>SafeAndConsensual</mutator>
                  <mutator>SafeButControversial</mutator>
                  <mutator>SafeButNotConsensual</mutator>
                </mutators>
                <includeDraft>true</includeDraft>
              </cleanthat>
              <eclipse>
                <version>4.35</version>
                <sortMembersEnabled>true</sortMembersEnabled>
                <!-- Optional: Specify the sort order of the member categories. (default: T,SF,SI,SM,F,I,C,M)
                     SF,SI,SM,F,I,C,M,T = Static Fields, Static Initializers, Static Methods, Fields, Initializers, Constructors, Methods, (Nested) Types -->
                <sortMembersOrder>SF,SI,SM,F,I,C,M,T</sortMembersOrder>
                <!-- Optional: Enable reordering of members of the same category by the visibility within the category. (default: false) -->
                <sortMembersVisibilityOrderEnabled>true</sortMembersVisibilityOrderEnabled>
                <!-- Optional: Specify the ordering of members of the same category by the visibility within the category. (default: B,V,R,D)
                     B,R,D,V = Public, Protected, Package, Private -->
                <sortMembersVisibilityOrder>B,R,D,V</sortMembersVisibilityOrder>
              </eclipse>
              <palantirJavaFormat>
                <version>2.61.0</version>
                <style>PALANTIR</style>
                <formatJavadoc>true</formatJavadoc>
              </palantirJavaFormat>
              <importOrder/>
              <formatAnnotations/>
            </java>
            <pom>
              <includes>
                <include>pom.xml</include>
              </includes>
              <sortPom>
                <expandEmptyElements>false</expandEmptyElements>
                <keepBlankLines>false</keepBlankLines>
                <sortDependencies>groupId,artifactId</sortDependencies>
                <sortDependencyManagement>groupId,artifactId</sortDependencyManagement>
                <sortPlugins>groupId,artifactId</sortPlugins>
                <sortProperties>true</sortProperties>
              </sortPom>
            </pom>
            <markdown>
              <includes>
                <include>/**/*.md</include>
              </includes>
              <flexmark/>
            </markdown>
            <sql>
              <includes>
                <include>src/**/resources/**/*.sql</include>
              </includes>
              <dbeaver/>
            </sql>
            <shell>
              <includes>
                <include>scripts/**/*.sh</include>
              </includes>
              <shfmt/>
            </shell>
            <gherkin>
              <includes>
                <include>src/**/*.feature</include>
              </includes>
              <gherkinUtils>
                <version>9.2.0</version>
              </gherkinUtils>
            </gherkin>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
              <phase>verify</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.rudikershaw.gitbuildhook</groupId>
          <artifactId>git-build-hook-maven-plugin</artifactId>
          <version>3.5.0</version>
          <configuration>
            <gitConfig>
              <core.hooksPath>githooks/</core.hooksPath>
            </gitConfig>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>configure</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <annotationProcessorPaths>
              <path>
                <groupId>com.google.auto.service</groupId>
                <artifactId>auto-service</artifactId>
                <version>${auto-service.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.6.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.18.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.rudikershaw.gitbuildhook</groupId>
        <artifactId>git-build-hook-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
